--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -6,3 +6,355 @@
     @include box-shadow()
 }
 
+.page-section {
+    padding: 1.5rem 0;
+}
+
+.wrapper {
+    padding: 0 2rem;
+}
+
+//------------------------------------------------------------
+
+.header {
+    color: $color-tertiary-light;
+}
+
+.top-bar {
+    display: flex;
+    justify-content: flex-end;
+    background-color: $color-tertiary;
+}
+
+.top-bar-menu {
+    display: flex;
+    font-size: 1.2rem;
+
+    &__item {
+        list-style: none;
+
+        &:not(:last-child) {
+            margin-right: 1.5rem;
+        }
+
+    }
+
+    &__link {
+        color: inherit;
+        text-decoration: none;
+        text-transform: uppercase;
+        transition: .4s;
+
+        &:hover {
+            color: $color-tertiary-lighter;
+        }
+    }
+}
+
+.bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.5rem;
+
+    height: 12rem;
+    background-color: $color-tertiary-dark;
+    padding: 0 2.5rem;
+
+    & > * {
+        flex-basis: 30rem;
+    }
+}
+
+.search {
+    display: flex;
+    align-items: stretch;
+
+    color: $color-tertiary-light;
+    border: 1px solid currentColor;
+    border-radius: 22px;
+    transition: .4s;
+
+    &:hover{
+        border: 1px solid $color-primary;
+    }
+
+    &:hover &__input {
+        border-left: 1px solid $color-primary;
+        border-right: 1px solid $color-primary;
+    }
+
+    & > * {
+        padding: .8rem 1.3rem;
+        color: inherit;
+    }
+
+    &__show-all {
+        flex-basis: 3rem;
+    }
+
+    &__input {
+        box-sizing: border-box;
+        font-size: inherit;
+        color: currentColor;
+        background-color: transparent;
+        outline: 0 transparent;
+        flex-grow: 1;
+        border: none;
+        border-left: 1px solid currentColor;
+        border-right: 1px solid currentColor;
+        transition: .4s;
+    }
+
+    &__btn {
+        flex-basis: 3rem;
+    }
+}
+
+.logo {
+    font-size: 6rem;
+    text-align: center;
+}
+
+.cart {
+    display: flex;
+    align-items: stretch;
+    justify-content: flex-end;
+
+    color: $color-tertiary-light;
+    border: 1px solid currentColor;
+    border-radius: 22px;
+    transition: .4s;
+
+    &:hover{
+        border: 1px solid $color-tertiary-lighter;
+    }
+
+    & > * {
+        padding: .8rem 1.3rem;
+        color: inherit;
+    }
+
+    &__btn {
+        flex-basis: 3rem;
+    }
+}
+
+.navbar{
+    display: flex;
+    justify-content: center;
+    background-color: $color-primary;
+    font-size: 1.3rem;
+    font-weight: 500;
+    letter-spacing: 2px;
+}
+
+.main-menu {
+    display: flex;
+    list-style: none;
+
+    &__item {
+        border-left: 1px solid $color-tertiary;
+        transition: .4s;
+
+        &:hover {
+            background-color: $color-tertiary-darker;
+        }
+
+        &:last-child {
+            border-right: 1px solid $color-tertiary;
+        }
+    }
+
+    &__link {
+        display: inline-block;
+        padding: 1rem 1.5rem;
+        text-decoration: none;
+        text-transform: uppercase;
+        color: $color-secondary;
+    }
+}
+
+//====================================
+.slider {
+    width: 100%;
+    height: auto;
+}
+
+.slide {
+    position: relative;
+    width: 100%;
+
+    &__text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-weight: 600;
+        text-align: center;
+        text-transform: uppercase;
+    }
+
+    &__title {
+        font-size: 8rem;
+        color: $color-primary-darker;
+    }
+
+    &__sub-title {
+        display: inline-block;
+        padding: 0.5rem;
+        border-bottom: 1px solid currentColor;
+        font-size: 5rem;
+        font-weight: 500;
+        color: $color-primary;
+    }
+
+    &__img {
+        width: 100%;
+        max-width: 100%;
+    }
+}
+
+//=====================================
+.banners {
+    display: flex;
+    justify-content: space-between;
+
+    // padding: 2rem;
+
+    &__item {
+        flex-grow: 1;
+        margin: 2rem 0;
+        margin-left: 2rem;
+
+        &:last-child {
+            margin-right: 2rem;
+        }
+    }
+}
+
+.banner {
+    height: auto;
+    position: relative;
+    overflow: hidden;
+    transition: .4s;
+
+    &::before {
+        content: '';
+        display: inline-block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-color: rgba($color-primary-dark, 0);
+        transition: .4s;
+    }
+
+    &:hover {
+        &::before {
+            background-color: rgba($color-primary-dark, .6);
+        }
+    }
+
+    &:hover &__btn {
+        bottom: 3rem;
+    }
+
+    &__img {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    &__btn {
+        position: absolute;
+        z-index: 20;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: -3rem;
+        transition: .4s;
+    }
+}
+
+.inline-btn {
+    display: inline-block;
+    padding: 0.5rem;
+    font-size: 1.3rem;
+    color: $color-secondary;
+    border-bottom: 1px solid $color-primary;
+}
+
+.top-products {
+    background-color: $color-tertiary-light;
+}
+
+.tabs {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    margin-bottom: 2rem;
+
+    &__item {
+        flex-grow: 1;
+        color: $color-secondary;
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 1.5rem;
+        background-color: $color-tertiary-dark;
+        padding: 1rem;
+        transition: .4s;
+
+        &:hover {
+            background-color: $color-primary;
+        }
+    }
+
+    &__item--active {
+        background-color: $color-primary;
+        position: relative;
+
+        &::after {
+            content: '';
+            display: inline-block;
+            position: absolute;
+            width: 1.5rem;
+            height: 1.5rem;
+            background-color: $color-primary;
+            left: 50%;
+            transform: translateX(-50%) rotate(45deg);
+            bottom: -0.5rem;
+        }
+    }
+}
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+.card {
+    background: $color-secondary;
+    // height: 10rem;
+    flex-basis: 18%;
+    margin-bottom: 2rem;
+    margin-right: 2rem;
+    padding: 3px;
+    border: 2px solid transparent;
+    transition: .4s;
+
+    &__photo {
+        width: 100%;
+        height: auto;
+    }
+
+    &__img {
+        width: 100%;
+        max-width: 100%;
+        display: block;
+    }
+
+    &:hover {
+        border: 2px solid $color-primary;
+    }
+}
