--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,20 +1,21 @@
 
 
-$color-primary: #eb2f64;
-$color-primary-light: lighten($color-primary,15%);
-$color-primary-dark: darken($color-primary,15%);
+$color-primary: rgb(27, 173, 27);
+$color-primary-light: lighten($color-primary,30%);
+$color-primary-dark: darken($color-primary,30%);
+$color-primary-darker: darken($color-primary,34%);
 
-$color-secondary: #ccc;
-$color-secondary-light: lighten($color-secondary,15%);
-$color-secondary-dark: darken($color-secondary,15%);
+$color-secondary: rgb(255, 255, 255);
 
-$color-third: #777;
-$color-third-light: lighten($color-third,15%);
-$color-third-dark: darken($color-third,15%);
+$color-tertiary: #777;
+$color-tertiary-light: lighten($color-tertiary,30%);
+$color-tertiary-lighter: lighten($color-tertiary,60%);
+$color-tertiary-dark: darken($color-tertiary,30%);
+$color-tertiary-darker: darken($color-tertiary,60%);
 
 $color-shadow: #111;
-$color-shadow-light: lighten($color-shadow,15%);
-$color-shadow-dark: darken($color-shadow,15%);
+$color-shadow-light: lighten($color-shadow,30%);
+$color-shadow-dark: darken($color-shadow,30%);
 
 $shadow-x-axis-none: 0;
 $shadow-x-axis-xs: .5rem;
