markup all blocks and footer

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -11,6 +11,15 @@
     box-sizing: inherit;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+ul {
+    list-style: none;
+}
+
 html {
     box-sizing: border-box;
     font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
