--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -1,8 +1,20 @@
+$bp-largest: 75em;     // 1200px
+$bp-large: 68.75em;    // 1100px
+$bp-medium: 56.25em;   // 900px
+$bp-small: 37.5em;     // 600px
+$bp-smallest: 31.25em; // 500px
+
 .container {
     max-width: 150rem;
     margin: 0 auto;
     min-height: 50rem;
     @include box-shadow()
+
+    @media only screen and (max-width: $bp-largest) {
+        margin: 0;
+        min-width: 100%;
+        width: 100%;
+    }
 }
 
 .page-section {
@@ -21,6 +33,12 @@
 
 .header {
     color: $color-tertiary-light;
+    background-color: $color-tertiary-dark;
+    background-image: linear-gradient(to right, rgba($color-tertiary, 1), rgba($color-tertiary-dark, 1));
+
+    @media only screen and (max-width: $bp-large) {
+        padding-bottom: 1rem;
+    }
 }
 
 .top-bar {
@@ -60,25 +78,13 @@
     }
 }
 
-.bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 1.5rem;
-
-    background-color: $color-tertiary-dark;
-    background-image: linear-gradient(to right, rgba($color-tertiary, 1), rgba($color-tertiary-dark, 1));
-
-    & > * {
-        flex-basis: 30rem;
-    }
-}
-
 .search {
     display: flex;
     align-items: stretch;
 
     color: $color-tertiary-lighter;
+    font-size: 1.5rem;
+
     border: 1px solid currentColor;
     border-radius: 22px;
     @include transition-medium()
@@ -99,6 +105,7 @@
 
     &__show-all {
         flex-basis: 3rem;
+        @include flex-centered()
     }
 
     &__input {
@@ -120,12 +127,45 @@
 
     &__btn {
         flex-basis: 3rem;
+        @include flex-centered()
+    }
+
+    &__btn--mobile {
+        display: none;
+        text-align: left;
+
+        @media only screen and (max-width: $bp-large) {
+            display: block;
+        }
+    }
+
+    &--mobile {
+        display: none;
+
+        @media only screen and (max-width: $bp-large) {
+            display: flex;
+        }
     }
 
     &__icon {
         height: 2rem;
         width: 2rem;
         fill: $color-primary;
+
+        @media only screen and (max-width: $bp-large) {
+            height: 3rem;
+            width: 3rem;
+            fill: $color-primary;
+        }
+    }
+
+    &__btn--mobile &__icon{
+        fill: $color-secondary;
+        @include transition-medium()
+
+        &:hover {
+            fill: $color-primary;
+        }
     }
 }
 
@@ -133,6 +173,14 @@
     font-size: 6rem;
     text-align: center;
     text-transform: uppercase;
+
+    @media only screen and (max-width: $bp-medium) {
+        font-size: 5rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+        font-size: 4rem;
+    }
 }
 
 .cart {
@@ -161,6 +209,7 @@
     &__btn {
         flex-basis: 3rem;
         border-left: 1px solid currentColor;
+        @include flex-centered()
         @include transition-medium()
     }
 
@@ -168,6 +217,54 @@
         height: 2rem;
         width: 2rem;
         fill: $color-primary;
+
+        @media only screen and (max-width: $bp-large) {
+            height: 3rem;
+            width: 3rem;
+            fill: $color-secondary;
+            @include transition-medium()
+
+            &:hover {
+                fill: $color-primary;
+            }
+        }
+    }
+
+    &--mobile {
+        display: none;
+        text-align: right;
+
+        @media only screen and (max-width: $bp-large) {
+            display: block;
+        }
+    }
+}
+
+.bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.5rem;
+
+    background-color: $color-tertiary-dark;
+    background-image: linear-gradient(to right, rgba($color-tertiary, 1), rgba($color-tertiary-dark, 1));
+
+    & > * {
+        flex-basis: 30rem;
+    }
+
+    &__search {
+
+        @media only screen and (max-width: $bp-large) {
+            display: none;
+        }
+    }
+
+    &__cart {
+
+        @media only screen and (max-width: $bp-large) {
+            display: none;
+        }
     }
 }
 
@@ -180,6 +277,10 @@
 
     background-color: $color-primary;
     background-image: linear-gradient(to right, rgba($color-primary, 1), rgba($color-primary-dark, 1));
+
+    @media only screen and (max-width: $bp-large) {
+        display: none;
+    }
 }
 
 .main-menu {
@@ -245,6 +346,18 @@
     &__title {
         font-size: 8rem;
         color: $color-primary-darker;
+
+        @media only screen and (max-width: $bp-medium) {
+            font-size: 6rem;
+        }
+
+        @media only screen and (max-width: $bp-small) {
+            font-size: 5rem;
+        }
+
+        @media only screen and (max-width: $bp-smallest) {
+            font-size: 3rem;
+        }
     }
 
     &__sub-title {
@@ -254,6 +367,18 @@
         font-size: 5rem;
         font-weight: 500;
         color: $color-primary;
+
+        @media only screen and (max-width: $bp-medium) {
+            font-size: 4rem;
+        }
+
+        @media only screen and (max-width: $bp-small) {
+            font-size: 3.5rem;
+        }
+
+        @media only screen and (max-width: $bp-smallest) {
+            font-size: 1.5rem;
+        }
     }
 
     &__img {
@@ -265,17 +390,17 @@
 //=====================================
 .banners {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 
-    // padding: 2rem;
+    padding: 2rem;
 
     &__item {
-        flex-grow: 1;
-        margin: 2rem 0;
-        margin-left: 2rem;
+        flex: 0 0 24%;
+        margin-bottom: 2rem;
 
-        &:last-child {
-            margin-right: 2rem;
+        @media only screen and (max-width: $bp-medium) {
+            flex: 0 0 49%;
         }
     }
 }
@@ -398,6 +523,14 @@
     margin-bottom: 2rem;
     display: flex;
     flex-direction: row;
+
+    @media only screen and (max-width: $bp-medium) {
+        flex: 0 0 calc( 34% - 2rem );
+    }
+
+    @media only screen and (max-width: $bp-small) {
+        flex: 0 0 calc( 52% - 2rem );
+    }
 }
 
 .card {
@@ -538,6 +671,11 @@
         align-items: center;
         justify-content: space-around;
         background-color: $color-tertiary-dark;
+
+        @media only screen and (max-width: $bp-small) {
+            flex-direction: column;
+            padding-bottom: 1rem;
+        }
     }
 
     &__logo {
