spli out all components into different files

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,29 @@
-@import "base";
 @import "variables";
-@import "layout";
-@import "components";
+
+@import "base";
+
+
+@import "container";
+@import "page-section";
+@import "wrapper";
+@import "header";
+@import "top-bar";
+@import "top-bar-menu";
+@import "search";
+@import "cart";
+@import "bar";
+@import "logo";
+@import "navbar";
+@import "main-menu";
+@import "slider";
+@import "slide";
+@import "banners";
+@import "banner";
+@import "inline-btn";
+@import "top-products";
+@import "tabs";
+@import "cards";
+@import "card-wrapper";
+@import "card";
+@import "footer";
+@import "modal";
