--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,27 +3,27 @@
 @import "base";
 
 
-@import "container";
-@import "page-section";
-@import "wrapper";
-@import "header";
-@import "top-bar";
-@import "top-bar-menu";
-@import "search";
-@import "cart";
-@import "bar";
-@import "logo";
-@import "navbar";
-@import "main-menu";
-@import "slider";
-@import "slide";
-@import "banners";
-@import "banner";
-@import "inline-btn";
-@import "top-products";
-@import "tabs";
-@import "cards";
-@import "card-wrapper";
-@import "card";
-@import "footer";
-@import "modal";
+@import "components/container";
+@import "components/page-section";
+@import "components/wrapper";
+@import "components/header";
+@import "components/top-bar";
+@import "components/top-bar-menu";
+@import "components/search";
+@import "components/cart";
+@import "components/bar";
+@import "components/logo";
+@import "components/navbar";
+@import "components/main-menu";
+@import "components/slider";
+@import "components/slide";
+@import "components/banners";
+@import "components/banner";
+@import "components/inline-btn";
+@import "components/top-products";
+@import "components/tabs";
+@import "components/cards";
+@import "components/card-wrapper";
+@import "components/card";
+@import "components/footer";
+@import "components/modal";
