--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,6 @@
 
 @import "base";
 
-
 @import "components/container";
 @import "components/page-section";
 @import "components/wrapper";
@@ -27,3 +26,6 @@
 @import "components/card";
 @import "components/footer";
 @import "components/modal";
+@import "components/page";
+@import "components/breadcrumbs";
+
