--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -15,6 +15,8 @@ $color-primary-darker: hsl($color-base, 60%, 15%);
 
 // $color-secondary: rgb(255, 255, 255);
 $color-secondary: hsl($color-base, 60%, 92%);
+$color-secondary-light: hsl($color-base, 60%, 95%);
+$color-secondary-lighter: hsl($color-base, 60%, 98%);
 
 // $color-tertiary: #777;
 $color-tertiary: hsl($color-base, 5%, 55%);
@@ -55,6 +57,7 @@ $color-shadow-dark: darken($color-shadow,30%);
 }
 
 @mixin abs-center-horizontal {
+    position: absolute;
     left: 50%;
     transform: translateX(-50%);
 }
