--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -24,7 +24,7 @@
         margin: auto;
         background-color: rgba($color-tertiary-darker, 1);
 
-        height: 30rem;
+        min-height: 30rem;
     }
 
     &__header {
@@ -42,8 +42,8 @@
 
     &__close {
         position: absolute;
-        top: 13px;
-        right: 13px;
+        top: 1.1rem;
+        right: 1.1rem;
         width: 30px;
         height: 30px;
 
