--- a/src/scss/components/_breadcrumbs.scss
+++ b/src/scss/components/_breadcrumbs.scss
@@ -9,6 +9,7 @@
 
     &__item {
         position: relative;
+        @include transition-medium()
 
         &:not(:last-child) {
             margin-right: 1rem;
@@ -39,6 +40,7 @@
         height: 1.7rem;
         width: 1.7rem;
         fill: $color-tertiary-darker;
+        @include transition-medium()
 
         &:hover {
             fill: $color-primary;
