--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,4 +1,7 @@
 .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     flex: 1;
 
     background: $color-secondary;
@@ -13,9 +16,10 @@
     }
 
     &__img {
-        width: 100%;
         max-width: 100%;
+        max-height: 250px;
         display: block;
+        margin: 0px auto;
     }
 
     &__line {
@@ -44,6 +48,7 @@
         text-transform: uppercase;
         text-align: center;
         font-weight: 700;
+        min-height: 5rem;
         cursor: pointer;
     }
 
