--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -48,7 +48,8 @@
         text-transform: uppercase;
         text-align: center;
         font-weight: 700;
-        min-height: 5rem;
+        min-height: 6rem;
+        max-height: 6rem;
         cursor: pointer;
     }
 
