--- a/src/scss/components/_shoping-list.scss
+++ b/src/scss/components/_shoping-list.scss
@@ -19,13 +19,14 @@
     }
     
     &__item-photo {
-        padding: 2.5rem;
+        padding: .5rem;
         width: 20%;
         border-bottom: 1px solid $color-tertiary-light;
     }
 
     &__item-img {
         max-width: 80%;
+        max-height: 10rem;
     }
 
     &__item-name {
@@ -38,6 +39,46 @@
         border-bottom: 1px solid $color-tertiary-light;
     }
 
+    &__item-count-btn {
+        display: inline-block;
+        width: 20rem;
+        padding: .5rem 0;
+        background-color: $color-tertiary-darker;
+        border: 1px solid $color-tertiary;
+        color: $color-primary;
+        font-size: 1.4rem;
+        margin: 1rem 0;
+        @include transition-medium()
+
+        &:hover {
+            border: 1px solid $color-primary-lighter;
+            @include box-shadow-small()
+        }
+    }
+
+    &__item-count-btn > * {
+        display: inline-block;
+        text-align: center;
+        vertical-align: middle;
+        padding: .4rem .5rem .5rem .5rem;
+        line-height: 1;
+    }
+
+    &__item-count-btn-buttons {
+        width: 2.5rem;
+        height: 2.5rem;
+        color: $color-primary-light;
+        border-radius: 50%;
+        background-color: $color-tertiary;
+        border: 1px solid $color-tertiary-light;
+        @include transition-medium()
+        cursor: pointer;
+
+        &:hover {
+            background-color: $color-primary;
+        }
+    }
+
     &__item-price {
         width: 10%;
         border-bottom: 1px solid $color-tertiary-light;
@@ -46,5 +87,15 @@
     &__item-sum {
         width: 10%;
         border-bottom: 1px solid $color-tertiary-light;
+    }
+
+    &__total {
+        font-size: 2.2rem;
+        text-align: right;
+        font-weight: 600;
+        padding: 2rem;
+        border: 1px solid #000;
+        width: 25rem;
+        margin-left: auto;
     }
 }
