--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -13,6 +13,8 @@
     &__photo {
         width: 100%;
         height: auto;
+        position: relative;
+        cursor: pointer;
     }
 
     &__img {
