--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -4,7 +4,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba($color-tertiary, .8);
+    background-color: rgba(black, .6);
     z-index: 5;
     display: flex;
 
@@ -13,60 +13,236 @@
     transform: scale(1.2);
     @include transition-medium()
 
+    &--message {
+        transform: scale(.7);
+        background-color: rgba(black, .4);
+        border-radius: 4px;
+        top: 3rem;
+        right: 2.5rem;
+        left: auto;
+        bottom: auto;
+        max-width: 50rem;
+        padding: .5rem;
+    }
+
     &--visible {
         opacity: 1;
         visibility: visible;
         transform: scale(1);
     }
 
+    &--message &__photo {
+        width: calc(25% - 10px);
+    }
+
+    &--message &__title {
+        font-size: 1.6em;
+    }
+
+    &--message &__info {
+        width: calc(75% - 10px);
+    }
+
+    &--message &__inner {
+        min-height: 13rem;
+        z-index: 2;
+        flex: 0 1 55rem;
+    }
+
+    &--message .wrapper {
+        padding: 0 .5rem;
+    }
+
+    &--message &__content {
+        padding: 1rem 0;
+    }
+
+    &--message &__close {
+        width: 2.5rem;
+        height: 2.5rem;
+
+        &::before,
+        &::after {
+            width: 1.5rem;
+            height: 2px;
+        }
+    }
+
+    &__description {
+        font-size: 1.6rem;
+    }
+
+    &__description--green {
+        color: rgba($color-primary   , 1);
+        font-size: 1.8rem;
+    }
+
     &__inner {
         flex: 0 1 70rem;
         margin: auto;
-        background-color: rgba($color-tertiary-darker, 1);
+        background-color: rgba($color-tertiary-lighter, 1);
+        border-radius: 5px;
 
-        min-height: 30rem;
+        min-height: 50rem;
+        position: relative;
+        z-index: 1;
     }
 
     &__header {
-        background-color: rgba($color-tertiary-light, 1);
+        background-color: rgba($color-tertiary-lighter, 1);
         border-bottom: 1px solid $color-tertiary-dark;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
 
-        position: relative;
+        // position: relative;
     }
 
     &__title {
-        font-size: 1.6rem;
+        font-size: 2rem;
         text-transform: uppercase;
         color: rgba($color-tertiary-darker, 1);
+        margin-bottom: 4rem;
     }
 
     &__close {
         position: absolute;
-        top: 1.1rem;
-        right: 1.1rem;
-        width: 30px;
-        height: 30px;
+        // top: 1.1rem;
+        // right: 1.1rem;
+        top: -2rem;
+        right: -2rem;
+        width: 4rem;
+        height: 4rem;
+        background-color: lightblue;
+        border-radius: 50%;
+        z-index: 5;
+        cursor: pointer;
 
         &::before,
         &::after {
             content: '';
             display: inline-block;
             position: absolute;
-            width: 100%;
-            height: 5px;
+            width: 2.5rem;
+            height: 4px;
             z-index: 3;
-            background-color: rgba($color-tertiary-darker, 1);
+            background-color: rgba($color-primary   , 1);
             border-radius: 5px;
             cursor: pointer;
             top: 50%;
+            left: 50%;
+            @include transition-medium()
         }
 
         &::before {
-            transform: translateY(-50%) rotate(45deg);
+            transform: translate(-50%, -50%) rotate(45deg);
         }
 
         &::after {
-            transform: translateY(-50%) rotate(-45deg);
+            transform: translate(-50%, -50%) rotate(-45deg);
         }
     }
+
+    &__content {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__photo {
+        width: calc(50% - 10px);
+    }
+
+    &__img {
+        max-width: 100%;
+        max-height: 30rem;
+    }
+
+    &__info {
+        width: calc(50% - 10px);
+    }
+
+    &__price {
+        font-size: 2.7rem;
+        font-weight: 600;
+        color: rgba($color-tertiary-darker, 1);
+    }
+
+    &__to-buy {
+        display: inline-block;
+        text-align: center;
+        width: 50%;
+        padding: .5rem 0;
+        background-color: $color-tertiary-darker;
+        border: 1px solid $color-tertiary;
+        border-radius: 3px;
+        color: $color-primary;
+        font-size: 1.4rem;
+        margin: 1rem 0;
+        position: absolute;
+        bottom: 0;
+        @include transition-medium()
+        @include abs-center-horizontal()
+
+        &:hover {
+            border: 1px solid $color-primary-lighter;
+            @include box-shadow-small()
+        }
+    }
+
+    &__to-buy > * {
+        display: inline-block;
+        text-align: center;
+        vertical-align: middle;
+        padding: .4rem .5rem .5rem .5rem;
+        line-height: 1;
+    }
+
+    &__to-buy-buttons {
+        width: 2.5rem;
+        height: 2.5rem;
+        color: $color-primary-light;
+        border-radius: 50%;
+        background-color: $color-tertiary;
+        border: 1px solid $color-tertiary-light;
+        @include transition-medium()
+        cursor: pointer;
+
+        &:hover {
+            background-color: $color-primary;
+        }
+    }
+
+    &__minus {
+
+    }
+
+    &__count {
+        color: $color-primary-lighter;
+    }
+
+    &__plus {
+
+    }
+
+    &__btn-buy {
+        text-transform: uppercase;
+
+        &:hover {
+            color: $color-primary-light;
+            @include transition-medium()
+        }
+    }
+
+    &__go-to-cart {
+        display: inline-block;
+        padding: 1rem;
+        background-color: $color-primary;
+        margin: 0 auto;
+        width: 100%;
+        margin-bottom: .5rem;
+        color: rgba($color-tertiary-lighter, 1);
+        text-transform: uppercase;
+        text-align: center;
+        font-size: 1.3rem;
+    }
+
 }
