--- a/src/scss/components/_shoping-list.scss
+++ b/src/scss/components/_shoping-list.scss
@@ -4,6 +4,7 @@
     border: 1px solid $color-tertiary-light;
     margin: 0 auto;
     margin-top: 1rem;
+    width: 100%;
 
     &__headline {
         text-transform: uppercase;
