--- a/src/scss/components/_bar.scss
+++ b/src/scss/components/_bar.scss
@@ -3,12 +3,17 @@
     justify-content: space-between;
     align-items: center;
     font-size: 1.5rem;
+    padding: 1rem;
 
     background-color: $color-tertiary-dark;
     background-image: linear-gradient(to right, rgba($color-tertiary, 1), rgba($color-tertiary-dark, 1));
 
     & > * {
         flex-basis: 30rem;
+    }
+
+    &__logo {
+        flex-basis: 15rem;
     }
 
     &__search {
