--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -46,6 +46,7 @@
     }
 
     &__title {
+        display: block;
         font-size: 1.6rem;
         text-transform: uppercase;
         text-align: center;
