--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -1,7 +1,11 @@
 .logo {
-    font-size: 6rem;
+    display: block;
     text-align: center;
-    text-transform: uppercase;
+
+    &__img {
+        max-width: 100%;
+        width: 100%;
+    }
 
     @media only screen and (max-width: $bp-medium) {
         font-size: 5rem;
