--- a/src/scss/components/_main-menu.scss
+++ b/src/scss/components/_main-menu.scss
@@ -2,6 +2,10 @@
     display: flex;
     color: $color-secondary;
 
+    &--active {
+        flex-direction: column;
+    }
+
     &__item {
         border-left: 1px solid $color-tertiary;
         border-bottom: 1px solid $color-primary;
