--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -11,4 +11,10 @@
     @media only screen and (max-width: $bp-large) {
         display: none;
     }
+
+    &--active {
+        display: block;
+    }
+
+
 }
