--- a/src/scss/components/_search.scss
+++ b/src/scss/components/_search.scss
@@ -58,7 +58,7 @@
         text-align: left;
 
         @media only screen and (max-width: $bp-large) {
-            display: block;
+            display: block;;
         }
     }
 
@@ -66,7 +66,7 @@
         display: none;
 
         @media only screen and (max-width: $bp-large) {
-            display: flex;
+            // display: flex;
         }
     }
 
